# kconfigDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui  myapp.kcfg  myapp.kcfgc
